--- a/Source/ansic/THANKS
+++ b/Source/ansic/THANKS
@@ -3,3 +3,5 @@ Many thakns to:
 	Pierre Sarrazin, for the configure scripts.
 
 	"zafi", for many tests.
+
+	The Allegro library, for some graphics functions.
