--- a/Source/ansic/NEWS
+++ b/Source/ansic/NEWS
@@ -1,3 +1,12 @@
+Version 0.5.3
+
+	Bugs in ellipses and arcs of ellipses with high
+	eccentricity, corrected.
+
+	INPUT & LINE INPUT now works in graphics mode.
+
+	Corrected bug synchronized mode not reset when changing mode.
+
 Version 0.5.2
 
 	CIRCLE extended to ellipses.
