Sources for 0.5.5 (Julián Albo)

--- a/Source/ansic/NEWS
+++ b/Source/ansic/NEWS
@@ -1,3 +1,19 @@
+Version 0.5.5
+
+	SINH, COSH, TANH, ASINH, ACOSH and ATANH functions.
+
+	Better handling of math errors.
+
+	ATAN2 function.
+
+	Command history.
+
+	Behaviour of RUN, CLEAR and NEW corrected.
+
+	Bug MODE not destroyed the window channels, corrected.
+
+	FINDFIRST$ and FINDNEXT$ functions.
+
 Version 0.5.4
 
 	Command line option -x to exclude keywords.
