Sources for 0.5.7 (Julián Albo)

--- a/Source/ansic/THANKS
+++ b/Source/ansic/THANKS
@@ -4,4 +4,6 @@ Many thakns to:
 
 	"zafi", for many tests.
 
+	"Poldark" for the .deb packages and testing.
+
 	The Allegro library, for some graphics functions.
