--- a/Source/ansic/TODO
+++ b/Source/ansic/TODO
@@ -1,6 +1,8 @@
 
 	Need a popen implementation that works reliably in all
-	versions of windows and even in deteched mode.
+	versions of windows and even in deteched mode. Now
+	works correctly compiled with mingw, but fails
+	compiled with Borland.
 
 	Many people ask for sound support, but I have no idea
 	of how to do that in a simple and portable way.
